--- a/app/views/index.html
+++ b/app/views/index.html
@@ -22,6 +22,37 @@
 
       <p><a href="https://docs.google.com/spreadsheets/d/1fZM4xJduzXmfCGlH1wEgMiem8uz-sOV86FsOwWxHjiY/edit#gid=0" target="_blank" class="button button-start">Download the data (csv)</a></p>
 
+      <details>
+
+        <summary><span class="summary">Options</span></summary>
+
+        <div class="panel panel-border-narrow">
+
+          <form>
+            <fieldset>
+              <label class="block-label" for="waste-type-1">
+                <input id="waste-type-1" name="waste-types" type="checkbox" value="waste-animal">
+                User need
+              </label>
+              <label class="block-label" for="waste-type-2">
+                <input id="waste-type-2" name="waste-types" type="checkbox" value="waste-mines">
+                Delivery organisation
+              </label>
+              <label class="block-label" for="waste-type-3">
+                <input id="waste-type-3" name="waste-types" type="checkbox" value="waste-farm-agricultural">
+                Theme
+              </label>
+              <label class="block-label" for="waste-type-4">
+                <input id="waste-type-4" name="waste-types" type="checkbox" value="waste-farm-agricultural">
+                Type
+              </label>
+            </fieldset>
+          </form>
+
+        </div>
+
+      </details>
+
 
       <h2 class="heading-medium">About the data</h2>
 
