--- a/app/views/index.html
+++ b/app/views/index.html
@@ -25,7 +25,7 @@
       <p>We collect data about <em>transactions</em>. A transaction forms part of an end-to-end service; It's the process which people go through to create, update, or delete their information or status with Government.</p>
 
 
-      <p>We collect two types of data about transactions: Characteristics (theme, type, etc.) and Facts (cost, volume, etc).</p>
+      <p>We collect two types of data about transactions: Characteristics (theme, type, etc.) and Facts (cost, usage, etc).</p>
 
       <p>Use the Characteristics to make sure you're doing fair comparisons of the Facts.</p>
 
