add org chart stuff

--- a/app/views/includes/scripts.html
+++ b/app/views/includes/scripts.html
@@ -5,7 +5,8 @@
 <script src="/public/javascripts/application.js"></script>
 
 <script type="text/javascript">
-	console.log("{{ orgData }}");
+	orgData = {{ orgData | safe}};
+
 </script>
 <script src="https://www.gstatic.com/charts/loader.js"></script>
 <script src="/public/javascripts/org-chart.js"></script>
