--- a/app/views/org-chart.html
+++ b/app/views/org-chart.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "layout_unbranded.html" %}
 
 {% block page_title %}
   Performance platform
@@ -10,7 +10,7 @@
   <div class="grid-row">
     <div class="column-two-thirds">
 
-      <h1 class="heading-xlarge">Org chart</h1>
+      <h1 class="heading-xlarge">Government Org Chart</h1>
 
 
       <div id="chart_div"></div>
