--- a/app/views/performance/setup/transaction/new.html
+++ b/app/views/performance/setup/transaction/new.html
@@ -62,6 +62,41 @@
     </div>
 
     <fieldset>
+      <legend class="form-label-bold">Transactions dependent on</legend>
+      <p class="form-hint">Transactions which must be completed before starting this one, if any</p>
+
+      <div class="form-group">
+        <label class="form-label" for="name">Transaction name</label>
+        <p class="form-hint">e.g. Vehicle tax: applications</p>
+        <input type="text" class="form-control" id="name">
+      </div>
+
+      <div class="form-group">
+        <label class="form-label" for="department">Department</label>
+        <p class="form-hint">Department responsible for this transaction</p>
+        <select class="form-control" id="department">
+          <option value=""></option>
+          <option value="DVLA">Department for Transport</option>
+          <option value="HMRC">HM Revenue and Customs</option>
+        </select>
+      </div>
+
+      <div class="form-group">
+        <label class="form-label" for="agency">Agency</label>
+        <p class="form-hint">Agency responsible for this transaction (optional)</p>
+        <select class="form-control" id="agency">
+          <option value=""></option>
+          <option value="NA">Not applicable</option>
+          <option value="NHSBT">NHS Blood and Transport</option>
+        </select>
+      </div>
+
+      <div class="form-group">
+        <a href="#">+ Add another dependency</a>
+      </div>
+    </fieldset>
+
+    <fieldset>
       <legend class="form-label-bold">Transaction category</legend>
       <p class="form-hint">Help us to categorise your transaction by choosing a theme and type</p>
 
@@ -147,6 +182,80 @@
         <option value="monthly">Monthly</option>
         <option value="annually">Annually</option>
       </select>
+    </div>
+
+    <div class="form-group">
+      <fieldset>
+        <legend class="form-label-bold">Starts on</legend>
+        <p class="form-hint">Event(s) that start the transaction</p>
+
+        <label for="click_of_start_button" class="block-label" data-target="start_page_url">
+          <input type="checkbox" name="click_of_start_button" value="click-of-start-button" id="click_of_start_button">
+          Click of GOV.UK Start button
+        </label>
+
+        <div class="panel panel-border-narrow js-hidden" id="start_page_url">
+          <label class="form-label" for="start_page_url">
+            Start page URL
+          </label>
+          <input class="form-control" type="text" id="start_page_url">
+        </div>
+
+        <label for="receipt_of_form" class="block-label">
+          <input type="checkbox" name="receipt_of_form" value="receipt-of-form" id="receipt_of_form">
+          Receipt of form
+        </label>
+      </fieldset>
+    </div>
+
+    <div class="form-group">
+      <fieldset>
+        <legend class="form-label-bold">Finishes on</legend>
+        <p class="form-hint">Event(s) that finish the transaction</p>
+
+        <label for="arrival_at_end_page" class="block-label">
+          <input type="checkbox" name="arrival_at_end_page" value="arrival-at-end-page" id="arrival_at_end_page">
+          Arrival at GOV.UK End page
+        </label>
+
+
+        <label for="send_notification" class="block-label">
+          <input type="checkbox" name="send_notification" value="send-notification" id="send_notification">
+          Send notification
+        </label>
+      </fieldset>
+    </div>
+
+    <div class="form-group">
+      <fieldset>
+        <legend class="form-label-bold">Interaction components</legend>
+        <p class="form-hint">Interaction components that make up the transaction</p>
+
+        <label for="eligibility" class="block-label">
+          <input type="checkbox" name="eligibility" value="eligibility" id="eligibility">
+          Eligibility
+        </label>
+
+        <label for="notification" class="block-label">
+          <input type="checkbox" name="notification" value="notification" id="notification">
+          Notification
+        </label>
+
+        <label for="smart_questions" class="block-label">
+          <input type="checkbox" name="smart_questions" value="smart-questions" id="smart_questions">
+          Smart questions
+        </label>
+
+        <label for="payment" class="block-label">
+          <input type="checkbox" name="payment" value="payment" id="payment">
+          Payment
+        </label>
+
+        <label for="verification" class="block-label">
+          <input type="checkbox" name="verification" value="verification" id="verification">
+          Verification
+        </label>
+      </fieldset>
     </div>
 
     <div class="form-group">
