Change 'Data owner' field to 'Data curator'

--- a/app/views/performance/setup/transaction/new.html
+++ b/app/views/performance/setup/transaction/new.html
@@ -288,13 +288,13 @@
     <!-- Full name -->
     <div class="form-group">
       <fieldset>
-        <legend class="form-label-bold">Data owner</legend>
+        <legend class="form-label-bold">Data curator</legend>
         <p class="form-hint">Name and email of person responsible for collecting cost and usage data</p>
-        <label class="form-label" for="data-owner-name">Name</label>
-        <input type="text" class="form-control" id="data-owner-name">
+        <label class="form-label" for="data-curator-name">Name</label>
+        <input type="text" class="form-control" id="data-curator-name">
 
-        <label class="form-label" for="data-owner-email">Email</label>
-        <input type="text" class="form-control" id="data-owner-email">
+        <label class="form-label" for="data-curator-email">Email</label>
+        <input type="text" class="form-control" id="data-curator-email">
       </fieldset>
     </div>
 
