--- a/app/views/performance/setup/transaction/new.html
+++ b/app/views/performance/setup/transaction/new.html
@@ -22,8 +22,8 @@
     <div class="grid-row">
       <p class="column-two-thirds">
         The information provided will be used to give context for,
-        and to aid comparison of, cost and usage data that you will be asked
-        to upload on a regular basis.
+        and to aid comparison of, cost and usage data that you will be
+        asked to provide on a regular basis.
       </p>
     </div>
 
