--- a/app/views/performance/index.html
+++ b/app/views/performance/index.html
@@ -287,11 +287,11 @@
   <script type="text/javascript">
     $('select#transaction-select').select2({
       allowClear: true,
-      placeholder: 'Start typing'
+      placeholder: 'Search...'
     });
     $('select#organisation-select').select2({
       allowClear: true,
-      placeholder: 'Start typing'
+      placeholder: 'Search...'
     });
   </script>
 </main>
