Add button to download filtered data

--- a/app/views/performance/index.html
+++ b/app/views/performance/index.html
@@ -76,13 +76,13 @@
 
       <h2 class="heading-medium">Download the data</h2>
 
-      <p>Click <em>Options</em> to filter the data downloaded.</p>
+      <p>Download data as a CSV file.</p>
 
-      <p><a href="https://docs.google.com/spreadsheets/d/1fZM4xJduzXmfCGlH1wEgMiem8uz-sOV86FsOwWxHjiY/edit#gid=0" target="_blank" class="button button-start">Download the data (csv)</a></p>
+      <p><a href="https://docs.google.com/spreadsheets/d/1fZM4xJduzXmfCGlH1wEgMiem8uz-sOV86FsOwWxHjiY/edit#gid=0" target="_blank" class="button button-start">Download all data</a></p>
 
       <details>
 
-        <summary><span class="summary">Options</span></summary>
+        <summary><span class="summary">Download filtered data</span></summary>
 
         <div class="panel panel-border-narrow">
 
@@ -275,6 +275,9 @@
           </form>
 
         </div>
+
+        <p><a href="https://docs.google.com/spreadsheets/d/1fZM4xJduzXmfCGlH1wEgMiem8uz-sOV86FsOwWxHjiY/edit#gid=0" target="_blank" class="button button-start">Download filtered data</a></p>
+
 
       </details>
 
