some changes to the org chart stuff

--- a/app/views/includes/scripts.html
+++ b/app/views/includes/scripts.html
@@ -5,8 +5,10 @@
 <script src="/public/javascripts/application.js"></script>
 
 <script type="text/javascript">
-	orgData = {{ orgData | safe}};
-
+	// orgData = {{ orgData | safe}};
 </script>
+
+<script src="/public/javascripts/orgs-master.js"></script>
+
 <script src="https://www.gstatic.com/charts/loader.js"></script>
 <script src="/public/javascripts/org-chart.js"></script>
