--- a/app/views/performance/index.html
+++ b/app/views/performance/index.html
@@ -87,39 +87,41 @@
         <div class="panel panel-border-narrow">
 
           <form>
+
+            <!-- Transactions filter -->
             <fieldset>
               <legend>Choose transactions to include:</legend>
 
-              <label for="radio-all-transactions" class="block-label">
-                <input id="radio-all-transactions" type="radio" name="radio-transactions" value="all">
+              <label for="all-transactions" class="block-label">
+                <input id="all-transactions" type="radio" name="transactions" value="all-transactions">
                 All transactions
               </label>
 
-              <label for="radio-organisation-transactions" class="block-label" data-target="select-organisation-panel">
-                <input id="radio-organisation-transactions" type="radio" name="radio-transactions" value="all">
+              <label for="transactions-for-organisations" class="block-label" data-target="select-organisations-panel">
+                <input id="transactions-for-organisations" type="radio" name="transactions" value="transactions-for-organisations">
                 Transactions for selected departments and agencies
               </label>
 
-              <div class="panel panel-border-narrow js-hidden" id="select-organisation-panel">
-                <label class="form-label" for="organisation-select">
+              <div class="panel panel-border-narrow js-hidden" id="select-organisations-panel">
+                <label class="form-label" for="organisations-select">
                   Select one or more departments or agencies
                 </label>
-                <select class="form-control" id="organisation-select" multiple="multiple"  style="width: 100%">
+                <select class="form-control" id="organisations-select" name="organisations-select" multiple="multiple"  style="width: 100%">
                   <option value="HMPO">HM Passport Office</option>
                   <option value="GLA">Gangmasters Licensing Authority</option>
                 </select>
               </div>
 
-              <label for="radio-selected-transactions" class="block-label" data-target="select-transaction-panel">
-                <input id="radio-selected-transactions" type="radio" name="radio-transactions" value="selected">
+              <label for="selected-transactions" class="block-label" data-target="select-transactions-panel">
+                <input id="selected-transactions" type="radio" name="transactions" value="selected-transactions">
                 Selected transactions
               </label>
 
-              <div class="panel panel-border-narrow js-hidden" id="select-transaction-panel">
-                <label class="form-label" for="transaction-select">
+              <div class="panel panel-border-narrow js-hidden" id="select-transactions-panel">
+                <label class="form-label" for="transactions-select">
                   Select one or more transactions
                 </label>
-                <select class="form-control" id="transaction-select" multiple="multiple" style="width: 100%">
+                <select class="form-control" id="transactions-select" multiple="multiple" style="width: 100%">
                   <option value="1">Access to birth records for adopted adults</option>
                   <option value="2">Adding details to the adoption contact register</option>
                   <option value="3">Apply for a license</option>
@@ -129,15 +131,16 @@
             </fieldset>
 
             <br>
+            <!-- Reporting periods filter -->
             <fieldset>
               <legend>Choose periods to report on:</legend>
 
-              <label for="radio-reporting-quarterly" class="block-label" data-target="select-quarters">
-                <input id="radio-reporting-quarterly" type="radio" name="reporting-period" value="quarterly">
+              <label for="reporting-quarterly" class="block-label" data-target="select-quarters-panel">
+                <input id="reporting-quarterly" type="radio" name="reporting-period" value="quarterly">
                 Quarterly
               </label>
 
-              <div class="panel panel-border-narrow js-hidden" id="select-quarters">
+              <div class="panel panel-border-narrow js-hidden" id="select-quarters-panel">
                 <label class="block-label" for="quarter-1">
                   <input id="quarter-1" name="quarters" type="checkbox" value="jan-mar-2016">
                   Jan - Mar 2016
@@ -159,19 +162,19 @@
                 </label>
               </div>
 
-              <label for="radio-reporting-yearly" class="block-label" data-target="choose-year-start-finish">
-                <input id="radio-reporting-yearly" type="radio" name="reporting-period" value="yearly">
+              <label for="reporting-yearly" class="block-label" data-target="choose-year-start-panel">
+                <input id="reporting-yearly" type="radio" name="reporting-period" value="yearly">
                 Yearly
               </label>
 
-              <div class="panel panel-border-narrow js-hidden" id="choose-year-start-finish">
+              <div class="panel panel-border-narrow js-hidden" id="choose-year-start-panel">
                 <p class="form-hint">Choose a start month of a 12-month period</p>
-                <label for="radio-year-jan-dec" class="block-label" data-target="select-years-jan-dec">
-                  <input id="radio-year-jan-dec" type="radio" name="year-range" value="jan-dec">
+                <label for="year-jan-dec" class="block-label" data-target="select-years-jan-dec-panel">
+                  <input id="year-jan-dec" type="radio" name="year-range" value="jan-dec">
                   January
                 </label>
 
-                <div class="panel panel-border-narrow js-hidden" id="select-years-jan-dec">
+                <div class="panel panel-border-narrow js-hidden" id="select-years-jan-dec-panel">
                   <label class="block-label" for="jan-2015-dec-2015">
                     <input id="jan-2015-dec-2015" name="jan-2015-dec-2015" type="checkbox" value="jan-2015-dec-2015">
                     Jan 2015 - Dec 2015
@@ -183,12 +186,12 @@
                   </label>
                 </div>
 
-                <label for="radio-year-apr-mar" class="block-label" data-target="select-years-apr-mar">
-                  <input id="radio-year-apr-mar" type="radio" name="year-range" value="apr-mar">
+                <label for="year-apr-mar" class="block-label" data-target="select-years-apr-mar-panel">
+                  <input id="year-apr-mar" type="radio" name="year-range" value="apr-mar">
                   April
                 </label>
 
-                <div class="panel panel-border-narrow js-hidden" id="select-years-apr-mar">
+                <div class="panel panel-border-narrow js-hidden" id="select-years-apr-mar-panel">
                   <label class="block-label" for="apr-2015-mar-2016">
                     <input id="apr-2015-mar-2016" name="apr-2015-mar-2016" type="checkbox" value="apr-2015-mar-2016">
                     Apr 2015 - Mar 2016
@@ -200,12 +203,12 @@
                   </label>
                 </div>
 
-                <label for="radio-year-jul-jun" class="block-label" data-target="select-years-jul-jun">
-                  <input id="radio-year-jul-jun" type="radio" name="year-range" value="jul-jun">
+                <label for="year-jul-jun" class="block-label" data-target="select-years-jul-jun-panel">
+                  <input id="year-jul-jun" type="radio" name="year-range" value="jul-jun">
                   July
                 </label>
 
-                <div class="panel panel-border-narrow js-hidden" id="select-years-jul-jun">
+                <div class="panel panel-border-narrow js-hidden" id="select-years-jul-jun-panel">
                   <label class="block-label" for="jul-2014-jun-2015">
                     <input id="jul-2014-jun-2015" name="jul-2014-jun-2015" type="checkbox" value="jul-2014-jun-2015">
                     Jul 2014 - Jun 2015
@@ -217,12 +220,12 @@
                   </label>
                 </div>
 
-                <label for="radio-year-oct-sep" class="block-label" data-target="select-years-oct-sep">
-                  <input id="radio-year-oct-sep" type="radio" name="year-range" value="oct-sep">
+                <label for="year-oct-sep" class="block-label" data-target="select-years-oct-sep-panel">
+                  <input id="year-oct-sep" type="radio" name="year-range" value="oct-sep">
                   October
                 </label>
 
-                <div class="panel panel-border-narrow js-hidden" id="select-years-oct-sep">
+                <div class="panel panel-border-narrow js-hidden" id="select-years-oct-sep-panel">
                   <label class="block-label" for="oct-2014-sep-2015">
                     <input id="oct-2014-sep-2015" name="oct-2014-sep-2015" type="checkbox" value="oct-2014-sep-2015">
                     Oct 2014 - Sep 2015
@@ -237,37 +240,39 @@
             </fieldset>
 
             <br>
+            <!-- Characteristics filter -->
             <fieldset>
               <legend>Select characteristics to include:</legend>
 
-              <label class="block-label" for="waste-type-1">
-                <input id="waste-type-1" name="waste-types" type="checkbox" value="waste-animal">
+              <label class="block-label" for="characteristic-1">
+                <input id="characteristic-1" name="characteristics" type="checkbox" value="user-need">
                 User need
               </label>
-              <label class="block-label" for="waste-type-2">
-                <input id="waste-type-2" name="waste-types" type="checkbox" value="waste-mines">
+              <label class="block-label" for="characteristic-2">
+                <input id="characteristic-2" name="characteristics" type="checkbox" value="delivery-organisation">
                 Delivery organisation
               </label>
-              <label class="block-label" for="waste-type-3">
-                <input id="waste-type-3" name="waste-types" type="checkbox" value="waste-farm-agricultural">
+              <label class="block-label" for="characteristic-3">
+                <input id="characteristic-3" name="characteristics" type="checkbox" value="theme">
                 Theme
               </label>
-              <label class="block-label" for="waste-type-4">
-                <input id="waste-type-4" name="waste-types" type="checkbox" value="waste-farm-agricultural">
+              <label class="block-label" for="characteristic-4">
+                <input id="characteristic-4" name="characteristics" type="checkbox" value="type">
                 Type
               </label>
             </fieldset>
 
             <br>
+            <!-- Facts filter -->
             <fieldset>
               <legend>Select facts to include:</legend>
 
-              <label class="block-label" for="waste-type-5">
-                <input id="waste-type-5" name="waste-types" type="checkbox" value="waste-animal">
+              <label class="block-label" for="fact-1">
+                <input id="fact-1" name="facts" type="checkbox" value="cost-per-transaction">
                 Cost per transaction
               </label>
-              <label class="block-label" for="waste-type-6">
-                <input id="waste-type-6" name="waste-types" type="checkbox" value="waste-mines">
+              <label class="block-label" for="fact-2">
+                <input id="fact-2" name="facts" type="checkbox" value="usage">
                 Usage
               </label>
             </fieldset>
@@ -278,7 +283,6 @@
 
         <p><a href="https://docs.google.com/spreadsheets/d/1fZM4xJduzXmfCGlH1wEgMiem8uz-sOV86FsOwWxHjiY/edit#gid=0" target="_blank" class="button button-start">Download filtered data</a></p>
 
-
       </details>
 
       <h2 class="heading-medium">Other data resources</h2>
@@ -288,11 +292,11 @@
     </div>
   </div>
   <script type="text/javascript">
-    $('select#transaction-select').select2({
+    $('select#transactions-select').select2({
       allowClear: true,
       placeholder: 'Search...'
     });
-    $('select#organisation-select').select2({
+    $('select#organisations-select').select2({
       allowClear: true,
       placeholder: 'Search...'
     });
@@ -300,5 +304,3 @@
 </main>
 
 {% endblock %}
-
-
