Make select lists consistent

--- a/app/views/performance/index.html
+++ b/app/views/performance/index.html
@@ -107,8 +107,11 @@
                   Select one or more departments or agencies
                 </label>
                 <select class="form-control" id="organisations-select" name="organisations-select" multiple="multiple"  style="width: 100%">
-                  <option value="HMPO">HM Passport Office</option>
+                  <option value="DVLA">Department for Transport</option>
                   <option value="GLA">Gangmasters Licensing Authority</option>
+                  <option value="HMPO">HM Passport Office</option>
+                  <option value="HMRC">HM Revenue and Customs</option>
+                  <option value="Home Office">Home Office</option>
                 </select>
               </div>
 
@@ -125,6 +128,7 @@
                   <option value="1">Access to birth records for adopted adults</option>
                   <option value="2">Adding details to the adoption contact register</option>
                   <option value="3">Apply for a license</option>
+                  <option value="4">Licensing system for gangmasters</option>
                 </select>
               </div>
 
